# graficasComputacionalesProyectoFinal

./: CMakeLists.txt  Instrucciones de compilacion y teclas de uso  a.out  arm.h  body.h  falda.h  feet.h  figuras.h  forearm.h  hand.h  head.h  leg.h  leg2.h  main.cpp  neck.h  particula.h  resorte.h  vector.h
